crates/language-v2/tests/src/fail/p0_parsing/code_string_literal/test.stderr
error: expected identifier
  --> src/fail/p0_parsing/code_string_literal/test.rs:18:83
   |
18 |                         parser_options = ParserOptions(inline = false, verbatim = "raw string not accepted")
   |                                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^
